Upgraded to Java 11. Implemented Builder pattern using spring